Fix breaking lines in code samples on mobile device.

--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -1,3 +1,11 @@
+pre {
+  word-break: normal;
+
+  code {
+    white-space: pre;
+  }
+}
+
 .highlight  { background: #ffffff; }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
